--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Velzon - Angular 15 Responsive Admin Dashboard Template</title>
+  <title>CONECT - IA</title>
   <!-- <base href="/velzon/angular/default/"> -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
