bloquear traduccion de pagina

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
   <!-- <base href="/velzon/angular/default/"> -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google" content="notranslate"/>
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
-<body>
+<body translate="no">
   <app-root></app-root>
 </body>
 
